# EdgeAI_Workflow

./: README.md
ai_accelerator/hailo/eai-1200_3300/: README.md  object_detection_demo-using-hailo(convert-model).md  object_detection_demo-using-hailo.md
ai_accelerator/hailo/eai-1200_3300/script/: hailo_detection_yolov8_video.sh
ai_sdk/intel/openvino/2026_1/: README.md  how_to_convert_vlm_openvino_ovms_gemma3_4b.md  how_to_convert_vlm_openvino_ovms_gemma4_12b.md  object_detection_with_intel_openvino_2026_1_yolov4_tf.md
ai_sdk/intel/openvino/2026_1/script/: download_model.py
ai_sdk/intel/openvino/2026_1/script/genai/gemma3_4b/: 00_config.bat  01_prepare_workspace.bat  02_prepare_env.bat  03_download_cpu_igpu_model.bat  04_download_npu_model.bat  05_check_models.bat  10_check_ovms.bat  11_run_ovms_cpu.bat  12_run_ovms_igpu.bat  13_run_ovms_npu.bat  20_chat_cpu_igpu.bat  21_chat_npu.bat  chat.bat  check_env.bat  run_all_download.bat  run_ovms.bat
ai_sdk/intel/openvino/2026_1/script/genai/gemma4_12b/: 00_config.bat  01_prepare_workspace.bat  02_prepare_convert_env.bat  03_download_raw_model.bat  04_convert_openvino_int4.bat  05_check_converted_model.bat  10_check_ovms.bat  11_run_ovms_cpu.bat  12_run_ovms_igpu.bat  20_chat.bat  check_env.bat  run_all_convert.bat  run_ovms.bat
ai_sdk/intel/openvino/2026_1/script/object_detection/: 00_config.bat  01_prepare_workspace.bat  02_prepare_convert_env.bat  03_prepare_runtime_env.bat  04_download_model.bat  05_convert_model.bat  06_build_demo.bat  07_run_cpu.bat  08_run_igpu.bat  09_run_npu.bat  14_download_yolov4_tf.bat  15_convert_yolov4_tf.bat  16_run_yolov4_cpu.bat  17_run_yolov4_igpu.bat  18_run_yolov4_npu.bat  check_env.bat  run_all_setup.bat  run_all_yolov4_setup.bat  run_demo.bat
ai_system/amd/aimb-2210/: README.md  create_mcp_server.md  object_detection_demo-using-amd_ryzenaisdk.md
ai_system/amd/aimb-2210/code/cpu_igpu - bk/Yolov8-Object/: CMakeLists.txt
ai_system/amd/aimb-2210/code/cpu_igpu/Yolov8-Object/: CMakeLists.txt  build.bat  yolov8-object.cpp
ai_system/amd/aimb-2210/code/mcp/: mcp_file_utils_demo.py  requirements.txt
ai_system/amd/aimb-2210/code/npu/multi-model-source-code/: CMakeLists.txt  build.bat
ai_system/amd/aimb-2210/code/npu/multi-model-source-code/src/app/: CMakeLists.txt  npu_multi_models.cpp
ai_system/amd/aimb-2210/code/npu/multi-model-source-code/src/processing/include/processing/: checkgui_task.hpp  decode_task.hpp  global.hpp  gui_task.hpp  pipeline.hpp  sort_task.hpp
ai_system/hailo/Hailo-8/: README.md  object_detection_demo-using-hailo.md
ai_system/intel/afe-r360/: README.md  object_detection_demo-using-intel_openvino.md
ai_system/intel/ark-2252/: README.md  how_to_convert_vlm_openvino_ovms_gemma3_4b.md  how_to_convert_vlm_openvino_ovms_gemma4_12b.md  object_detection_with_intel_openvino.md
ai_system/intel/ark-2252/script/: convert_gemma4_12b_openvino.py  download_model.py  ovms_chat_client.py
ai_system/intel/openvino/: README.md  how_to_convert_vlm_openvino_ovms_gemma3_4b.md  how_to_convert_vlm_openvino_ovms_gemma4_12b.md  object_detection_with_intel_openvino_2026_1_yolov4_tf.md
ai_system/intel/panther-lake/: README.md  how_to_convert_vlm_openvino_ovms_gemma3_4b.md  how_to_convert_vlm_openvino_ovms_gemma4_12b.md  object_detection_with_intel_openvino.md
ai_system/jetson/air-020r/: README.md  object_detection_demo-using-ds7.1.md
ai_system/jetson/air-020r/script/: deepstream_app_config_yoloV11_usb-camera.txt
ai_system/jetson/air-030/: README.md  object_detection_demo-using-ds7.0.md
ai_system/jetson/air-030/script/: config_infer_primary_yolo11.txt  deepstream_app_config_yoloV11_video.txt  run_yolo11.sh
ai_system/jetson/air-075/: README.md  object_detection_demo-using-ds8.0.md
ai_system/jetson/air-075/script/: config_infer_primary_yolo11.txt  deepstream_app_config_yoloV11.txt  deepstream_app_config_yoloV11_usb-camera.txt  deepstream_app_config_yoloV11_video.txt  run_yolo11.sh  run_yolov11.sh
ai_system/jetson/epc-r7300/: README.md  genai_vlm_demo.md  object_detection_demo-using-ds7.1.md
ai_system/jetson/epc-r7300/code/: genai_vlm_infer.py
ai_system/jetson/epc-r7300/script/: run_yolo11.sh
ai_system/qualcomm/air-055/: README.md  object_detection_demo-using-qc_ai_hub.md
ai_system/qualcomm/air-055/code/AI-Hub/object-detect/: CMakeLists.txt  ObjectDetector.cpp  SNPEPipeline.hpp  build.sh  main.cpp
ai_system/qualcomm/air-055/script/: run.sh
ai_system/qualcomm/aom-2721/: Create-an-Object_Detection_Demo-using-Qualcomm_AI_Hub.md  Create-an-Object+Detection_Demo-using-SNPE.md  README.md  object_detection_demo-using-qc_ai_hub.md  object_detection_demo-using-qc_snpe.md
ai_system/qualcomm/aom-6731/: README.md  object_detection_demo-using-qc_ai_hub.md
ai_system/qualcomm/aom-6731/code/cpu_igpu/object-detect/: yolov11.cpp
ai_system/qualcomm/aom-6731/code/npu/object-detect/: CMakeLists.txt  ObjectDetector.cpp  ObjectDetector.hpp  SNPEPipeline.cpp  SNPEPipeline.hpp  build.bat
ai_system/qualcomm/aom-6731/script/: run.bat
ai_system/qualcomm/aom-dk2721/: README.md  object_detection_demo-using-qc_ai_hub.md  object_detection_demo-using-qc_snpe.md
ai_system/qualcomm/aom-dk2721/linux/: README.md
ai_system/qualcomm/aom-dk2721/linux/script/: yolov8_cam_ai_hub.sh
ai_system/qualcomm/aom-dk2721/script/: yolov8_videofile_ai_hub.sh
ai_system/qualcomm/aom-dk2721/windows/: README.md  object_detection_demo-using-qc_ai_hub.md  object_detection_demo-using-qc_snpe.md
ai_system/qualcomm/aom-dk2721/windows/code/cpu_igpu/object-detect/: CMakeLists.txt  yolov11.cpp
ai_system/qualcomm/aom-dk2721/windows/code/npu/AI-Hub/object-detect/: CMakeLists.txt  ObjectDetector.cpp
ai_system/qualcomm/aom-dk2721/windows/code/npu/SNPE/: generate_random_input.py  get_coco_val.py
ai_system/qualcomm/aom-dk2721/windows/code/npu/SNPE/object-detect/: CMakeLists.txt  ObjectDetector.cpp  main.cpp
ai_system/qualcomm/rom-2860/: README.md
